Added nav lines

--- a/css/style.css
+++ b/css/style.css
@@ -93,34 +93,32 @@ div.buttons {
   width: 15px;
   height: 15px;
   border-color: var(--main-font-color);
-  /* or whatever colour */
   border-style: solid;
-  /* or whatever style */
   content: ' ';
 }
 
 #target:before {
   top: 0;
   left: 0;
-  border-width: 1px 0 0 1px
+  border-width: 1px 0 0 1px;
 }
 
 #target:after {
   top: 0;
   right: 0;
-  border-width: 1px 1px 0 0
+  border-width: 1px 1px 0 0;
 }
 
 #target>:first-child:before {
   bottom: 0;
   right: 0;
-  border-width: 0 1px 1px 0
+  border-width: 0 1px 1px 0;
 }
 
 #target>:first-child:after {
   bottom: 0;
   left: 0;
-  border-width: 0 0 1px 1px
+  border-width: 0 0 1px 1px;
 }
 
 #target p, #target span {
